Waybar: Fix spacing and change network module location

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -73,14 +73,6 @@ label:focus {
   padding: 0 10px;
 }
 
-#pulseaudio,
-#backlight,
-#cpu,
-#memory,
-#disk {
-  padding: 0 8px;
-}
-
 #window,
 #workspaces {
   margin: 0 4px;
